--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,7 @@ mainClassName='Controller.Home'
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
 }
